--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
     - docker
     
 before_install:
-    - docker build -e CI=true -t difalcomarco/docker-react -f Dockerfile.dev .
+    - docker build -t difalcomarco/docker-react -f Dockerfile.dev .
 
 script:
     - docker run difalcomarco/docker-react npm run test -- --coverage
