--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -3,7 +3,7 @@ FROM node:alpine
 WORKDIR '/app'
 COPY package.json .
 RUN npm install
-
+RUN chmod a+x /app/node_modules/react-scripts
 COPY . .
 
 CMD ["npm", "run", "start"]
